Update to README
Need to specify the proper command line settings for running nucmer show-snps in order to generate output that prephix knows how to interpret.

--- a/README
+++ b/README
@@ -16,6 +16,8 @@ The SNP loci file and indel files are suitable input for the SNP Swapper utility
 
 Recognized input file formats: k28.out (VAAL), NUCMER, VCF
 
+Nucmer output from show-snps should be run with the -ClrIT options to allow for proper interpretation by prephix.
+
 You may mix input file types within a single run/batch.
 
 
